[package]
name = "nodeset"
version = "0.6.0"
authors = ["Francois Diakhate <fdiakh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fdiakh/nodeset-rs"
keywords = ["nodeset", "hostlist", "cluster", "hpc"]
categories = ["command-line-utilities"]
description = "NodeSet management library"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ns"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:eyre", "dep:env_logger", "log/release_max_level_debug"]

[dependencies]
itertools = "0.14.0"
clap = { version = "4.5.51", features = ["derive"], optional = true }
nom = "8.0.0"
eyre = { version = "0.6.12", optional = true }
log = "0.4.28"
env_logger = { version = "0.11.8", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
shellexpand = "3.1.1"
shlex = "1.3.0"
rust-ini = "0.21.3"
serde_yaml = "0.9.34"
auto_enums = "0.8.7"

[dev-dependencies]
env_logger = "0.11.8"
tempfile = "3.23.0"


[profile.release]
debug = true

[workspace]
members = ["nodeset-capi"]
